Algorithm complexity and git review

--- a/notebooks/b_coding/fundamentals_of_computer_science/1_Algorythmic_Complexity.ipynb
+++ b/notebooks/b_coding/fundamentals_of_computer_science/1_Algorythmic_Complexity.ipynb
@@ -27,14 +27,15 @@
    "source": [
     "## Big O notation\n",
     "\n",
-    "The mathematical definiton of this concept can be found [**here**](https://primer-computational-mathematics.github.io/book/mathematics/mathematical_notation/Big_O_notation.html). In simple terms, we say that:\n",
+    "The mathematical definiton of this concept can be found {doc}`here </c_mathematics/mathematical_notation/Big_O_notation>`. In simple terms, we say that:\n",
     "\n",
     "\\\\[f(n) = O(g(n))\\\\] \n",
+    "\n",
     "if there exists \\\\(c>0\\\\) and \\\\(n_0>0\\\\) such that \n",
     "\n",
-    "\\\\[f(n) \\leq c * g(n)\\\\] for all \\\\(n \\geq n_0\\\\).\n",
+    "\\\\[f(n) \\leq c * g(n), \\quad \\text{for all} \\ n \\geq n_0.\\\\]\n",
     "\n",
-    "\\\\(g(n)\\\\) can be thought of as an *upper bound* of \\\\(f(n)\\\\) as \\\\(n\\\\) tends to infinity. In some publications *big Theta* notation is used. \\\\(\\Theta(n)\\\\) can be considered the *least upper bound*, in algorithm analysis we ofter use both notations interchangeably.\n",
+    "\\\\(g(n)\\\\) can be thought of as an *upper bound* of \\\\(f(n)\\\\) as \\\\(n \\to \\infty\\\\). In some publications *big Theta* notation is used. \\\\(\\Theta(n)\\\\) can be considered the *least upper bound*, in algorithm analysis we ofter use both notations interchangeably.\n",
     "\n",
     "Here are a couple of examples:\n",
     "\n",
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +291,7 @@
     }
    ],
    "source": [
-    "#Adds two square matrices of the same size\n",
+    "# Adds two square matrices of the same size\n",
     "def addMatrix(A,B):\n",
     "    res = []\n",
     "    for i in range(len(A)):\n",
@@ -311,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we want to add two matrices of side length \\\\(n\\\\), we have to access all of the cells in the matrix, therefore perform \\\\(n^2\\\\) additions."
+    "When we want to add two \\\\(n \\times n\\\\) matrices, we have to perform the addition element-wise, therefore we perform \\\\(n^2\\\\) additions."
    ]
   },
   {
@@ -320,13 +321,13 @@
    "source": [
     "------------------\n",
     "## Different complexities \n",
-    "Apart from the three complexities, there are many more which show up quite often. The most notable ones are (we will discuss some of them later)\n",
+    "Apart from the three complexities above, there are many more which show up quite often. The most notable ones are (we will discuss some of them later):\n",
     "\n",
-    "1) Logarythmic \\\\(O(log(n))\\\\) - present in e.g. Binary Search. \n",
+    "1) Logarithmic \\\\(O(log(n))\\\\) - present in e.g. Binary Search. \n",
     "\n",
     "2) Loglinear \\\\(O(n*log(n))\\\\) - e.g. Merge Sort.\n",
     "\n",
-    "3) Multi-variable \\\\(O(n*k)\\\\) - e.g. searching for a substing of length \\\\(k\\\\) in a string of length \\\\(n\\\\).\n",
+    "3) Multi-variable \\\\(O(n*k)\\\\) - e.g. searching for a substring of length \\\\(k\\\\) in a string of length \\\\(n\\\\).\n",
     "\n",
     "4) Exponential \\\\(O(a^n)\\\\), \\\\(a > 1\\\\) - this is bad.\n",
     "\n",
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answers\n",
     ":class: dropdown\n",
     "\n",
     "1) \\\\(O(n^3)\\\\)\n",
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -484,10 +485,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answer\n",
     ":class: dropdown\n",
     "        \n",
-    "\\\\(O(n^3)\\\\)\n",
+    "The function `mulMatrix` in its innermost loop does two operations: one multiplication and one addition. It does this \\\\(n^3\\\\) times because there are three nested `for` loops, each one iterating `n` times.\n",
+    "        \n",
+    "If we assume that multiplication and addition have the same complexity (which is of course not true), the answer is \\\\(O(2n^3)\\\\).\n",
     " \n",
     "```"
    ]
@@ -505,7 +508,7 @@
     "\n",
     "3) Take the minimum element from the unsorted portion of the list and put it at an appropriate position in the sorted portion.\n",
     "\n",
-    "4) Repeat untill the whole list is sorted.\n",
+    "4) Repeat until the whole list is sorted.\n",
     "\n",
     "The following GIF should be helpful:\n",
     "\n",
@@ -520,7 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answer\n",
     ":class: dropdown\n",
     "        \n",
     "\\\\(O(n^2)\\\\)\n",
@@ -561,5 +564,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
