--- a/notebooks/b_coding/programming_tools/1_Version_Control_Git.ipynb
+++ b/notebooks/b_coding/programming_tools/1_Version_Control_Git.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "This is where **version control** comes in. It is a software which allows you to track the development of your coding project. It also enables your peers to work on different versions of the same structure. \n",
     "\n",
-    "The most well-known version control facility is [Git](https://git-scm.com/) but there are others such as [Mercurial](https://www.mercurial-scm.org/). We are going to tackle the former. Many platforms allow to host Git repositories, but the most well known is [GitHub](https://github.com/). This is the one we are going to use. "
+    "The most well-known version control facility is [Git](https://git-scm.com/) but there are others such as [Mercurial](https://www.mercurial-scm.org/). We are going to tackle the former. Many platforms that host Git repositories exist, but the most well-known is [GitHub](https://github.com/). This is the one we are going to use."
    ]
   },
   {
@@ -20,9 +20,7 @@
    "source": [
     "## Setting up Git\n",
     "\n",
-    "If you are on MacOS or most distributions of Linux, you have git already configured on your machine. \n",
-    "For Windows, you will need to download and install [Git for Windows](https://gitforwindows.org/).\n",
-    "We will be accessing git via the terminal (*Git Bash* on Windows)."
+    "If you are on MacOS or most distributions of Linux, you have git already configured on your machine. For Windows, you will need to download and install [Git for Windows](https://gitforwindows.org/). We will be accessing git via the terminal (*Git Bash* on Windows)."
    ]
   },
   {
@@ -31,33 +29,33 @@
    "source": [
     "## My first Git repo\n",
     "\n",
-    "We create a repository on Github and then connect to it with the terminal. \n",
+    "We create a repository on GitHub and then connect to it using the terminal. \n",
     "\n",
     "Follow these steps:\n",
     "\n",
     "1) Create a GitHub account [here](https://github.com/join)\n",
     "\n",
-    "2) Click your profile picture in the upper right corner -> Your Repositories -> New (Green)\n",
+    "2) Click your profile picture in the upper right corner -> `Your Repositories` -> `New` (Green)\n",
     "\n",
-    "3) Choose a name (\"MyFirstRepo\"?)\n",
+    "3) Choose a Repository name (e.g. \"MyFirstRepo\")\n",
     "\n",
     "4) Set to Private\n",
     "\n",
     "5) Initialise this repository with a README (used to describe the repository)\n",
     "\n",
-    "6) Create a Repository (Green)\n",
+    "6) Click `Create Repository` (Green)\n",
     "\n",
-    "Now your repository is on Github, time to connect it to your local machine.\n",
+    "Now your repository is on Github and you can connect it to your local machine.\n",
     "\n",
-    "1) In the repository window click Code (Green)\n",
+    "1) In the repository window click `Code` (Green)\n",
     "\n",
     "2) Copy the given link (you might have an option to use SHH or HTTPS - the latter will be simpler for now)\n",
     "\n",
-    "3) Now go to the terminal\n",
+    "3) Now open the terminal on your computer\n",
     "\n",
-    "4) Type  ```git clone <link>``` e.g  ```git clone https://github.com/funnyaccount/MyFirstRepoTutorial``` and hit enter. You might be asked for your GitHub credentials.\n",
+    "4) Type `git clone <link>` where `<link>` is the link you copied above, e.g. `git clone https://github.com/funnyaccount/MyFirstRepoTutorial.git` and hit enter. You might be asked to enter your GitHub credentials.\n",
     "\n",
-    "Congratulations, your repo is on your machine!"
+    "Congratulations, your repo is now on your machine!"
    ]
   },
   {
@@ -70,7 +68,7 @@
     "\n",
     "* ```git clone <link>``` - creates a copy of the repo on your machine. \n",
     "\n",
-    "* ```git add <file/directory>``` - stages changes for a commit. It is the first part of the two-step process of creating a new snapshot. Files must be added before the commit. It needs to be run with an argument e.g.:\n",
+    "* ```git add <file/directory>``` - adds changed files or whole directories to a \"staging area\", which we will later commit to our repository. It is the first part of the two-step process of creating a new snapshot (commit), which is essentially a copy of our project. Files must be added before the commit. It needs to be run with an argument, e.g.:\n",
     "\n",
     "    &ensp;```git add text.txt``` - stages the ```text.txt``` file\n",
     "    \n",
@@ -78,9 +76,9 @@
     "\n",
     "    &ensp;```git add . ``` - stages all the unstaged files, **very common**.\n",
     "\n",
-    "* ```git commit -m \"message\"``` - saves the snapshot in the project history. It works as a photo, anything staged with ```git add``` will become a part of this snapshot. It is a good practice to run it with the ```-m``` flag followed by a brief message about what was done. Without ```-m``` you might be prompted to do it in a terminal text editor such as Vim. Read about the [Vim commands](https://www.fprintf.net/vimCheatSheet.html).\n",
+    "* ```git commit -m \"message\"``` - saves the snapshot in the project history. It works as a photo, anything staged with ```git add``` will become a part of this snapshot. It is a good practice to run it with the ```-m``` (message) flag followed by a brief message about what changes were made. Without ```-m``` you might be prompted to do it in a terminal text editor such as Vim. Read about the [Vim commands](https://www.fprintf.net/vimCheatSheet.html).\n",
     "\n",
-    "* ```git status``` - shows which files are staged, modified or untracked.\n",
+    "* ```git status``` - shows the overview of the staging area: which files are staged, modified or untracked (not staged).\n",
     "\n",
     "* ```git pull``` - updates the local repository with the changes made on the remote one. If you work in a team and your friend committed code, you might want to ```git pull``` to have those changes on your machine.\n",
     "\n",
@@ -91,13 +89,13 @@
     "\n",
     "* ```git init``` - initializes a new Git repository and begins tracking the directory. Adds a hidden subfolder required for the version control. Have a look at the exercises if you want to try it! \n",
     "\n",
-    "* ```git stash``` - this command is used quite infrequently. It locally saves the work that is not ready to commit and gives a clean working directory. For instance, when working on a new feature that’s not complete, but an urgent bug needs attention:\n",
+    "* ```git stash``` - this command is used quite infrequently. It locally saves the work that is not ready to commit and gives a clean working directory. For instance, when working on a new feature that's not complete, but an urgent bug needs attention:\n",
     "\n",
     "    &ensp;```git stash -u``` - saves the untracked files as well\n",
     "    \n",
     "    &ensp;```git stash pop``` - brings the stashed work back to the directory\n",
     "\n",
-    "* ```git fetch``` - downloads meta-data but does not change the files on your machine. It allows you which files are changes in the latest version of a branch but does no implement those changes. Followed by  ```git merge FETCH_HEAD``` works the same as  ```git pull```\n",
+    "* ```git fetch``` - downloads meta-data but does not change the files on your machine. It allows you to see the changes in the latest version of a branch but does not implement those changes. Followed by  ```git merge FETCH_HEAD``` works the same as  ```git pull```\n",
     "\n",
     "* ```git log``` - shows a chronological commit history for a repo."
    ]
@@ -108,7 +106,7 @@
    "source": [
     "## Git workflow\n",
     "\n",
-    "For now, the history of our project looks like that:\n",
+    "For now, the history of our project looks like this:\n",
     "\n",
     "```{figure} programming_tools_images/GitWorkFlowSingle.png\n",
     ":width: 100%\n",
@@ -119,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where circles denote pushed commits. \n",
+    "where circles denote pushed commits. \n",
     "\n",
     "The commands we have discussed enable us to work on one *branch*. A branch is a version of a project. The great power of Git comes when we work on multiple branches. Such a multi-branch project can have the following structure:\n",
     "\n",
@@ -132,15 +130,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Master** is usually the main branch of the project. All branches stem (immediately or not) from the master. When two braches become one, we say that they are *merged*. It is a good practice to merge all branches at the end of the development process (unless one of the branches is not relevant to the project). Consider the branches from the diagram:\n",
+    "**Master** is usually the main branch of the project. All branches stem (immediately or not) from the master branch. We might want to work on different parts of the project in separate branches and later *merge* them with the master branch when that part of the project is complete. It is good practice to merge all branches at the end of the development process (unless one of the branches is not relevant to the project). Consider the branches from the diagram above:\n",
     "\n",
-    "* FixRunner - there was a broken runner function in the structure of the project. One of the developers branched from the Master branch to fix it and then merged them.\n",
+    "* FixRunner - there was a broken \"runner\" function in the structure of the project. One of the developers branched from the Master branch to fix it and then merged them.\n",
     "\n",
-    "* FrontEnd - the team working on the front end works created this branch not to interfere with the rest of developers. It is merged with the Master at the end of the production cycle.\n",
+    "* FrontEnd - the team working on the front end works created this branch not to interfere with the rest of developers. It is merged with the Master branch at the end of the production cycle.\n",
     "\n",
-    "* OpenScreen - a feature developed by some people in the front end team.\n",
+    "* OpenSreen - a feature developed by some people in the front end team.\n",
     "\n",
-    "* Unused - branch that did not end up contributing to the final version of the project."
+    "* Unused - a branch that did not end up contributing to the final version of the project."
    ]
   },
   {
@@ -155,7 +153,7 @@
     "\n",
     "    &ensp;```git branch``` - shows the branches being worked on locally.\n",
     "    \n",
-    "    &ensp;```git branch -a``` - shows remote and local branches.\n",
+    "    &ensp;```git branch -a``` - shows remote and local branches (\"a\" stands for all).\n",
     "    \n",
     "    &ensp;```git branch <branch_name>``` - creates a new branch.\n",
     "    \n",
@@ -165,7 +163,7 @@
     "\n",
     "    &ensp;```git checkout <branch_name>``` - move to an existing branch.\n",
     "    \n",
-    "    &ensp;```git checkout -b <branch_name>``` - create a brnach and move to it.\n",
+    "    &ensp;```git checkout -b <branch_name>``` - create a branch and move to it.\n",
     "    \n",
     "* ```git merge <branch_name>``` - merges a branch into the current working branch (```<branch_name>``` will no longer be an independent branch)."
    ]
@@ -184,7 +182,7 @@
     "```shell\n",
     "cd MyFirstRepoTutorial\n",
     "```\n",
-    "Now we will create a new file in that folder:\n",
+    "Let us create a new file in that folder using vim:\n",
     "\n",
     "```shell\n",
     "vim Hello.txt\n",
@@ -230,13 +228,13 @@
     "```shell\n",
     "git branch -a\n",
     "```\n",
-    "This should mention the ```master``` branches (remote and local) as well as the ```HEAD``` which is used as a reference for newly cloning repos. Now we aim to create a new branch and move to it, there are two ways to do this:\n",
+    "This should mention the ```master``` branches (remote and local) as well as the ```HEAD``` which is an alias for the current branch we are in. Now we aim to create a new branch and move to it; there are two ways to do this:\n",
     "\n",
     "First:\n",
     "```shell\n",
-    "#create a new shell\n",
+    "# create a new branch\n",
     "git branch new_branch\n",
-    "#move to it\n",
+    "# navigate to it\n",
     "git checkout new_branch\n",
     "```\n",
     "\n",
@@ -275,7 +273,7 @@
     "-------------------\n",
     "* **Switching branches**\n",
     "\n",
-    "To verify that different branches containing different versions of the repository:\n",
+    "Let us verify that changing the `Hello.txt` file in `new_branch` does not affect the `Hello.txt` in master branch:\n",
     "\n",
     "```shell\n",
     "git checkout master\n",
@@ -285,6 +283,7 @@
     "```shell\n",
     "cat Hello.txt\n",
     "```\n",
+    "\n",
     "They are different, aren't they?"
    ]
   },
@@ -295,7 +294,7 @@
     "------------\n",
     "* **Merging** \n",
     "\n",
-    "Now, we want to merge the ```new_branch``` back to the ```master```. As we are in the ```master``` this should be easy:\n",
+    "Now, we want to merge the ```new_branch``` with the ```master```. As we are in the ```master``` branch (we did `git checkout master` above) this should be easy:\n",
     "\n",
     "```shell\n",
     "git merge new_branch\n",
@@ -310,7 +309,7 @@
     "--------------\n",
     "* **Merge Conflicts**\n",
     "\n",
-    "When merging branches, we might encounter issues related to the different versions of the same file. Let us induce such case. We are now in the ```master``` branch, create a following file ```pyth.py``` in the repository (which should be in your Home directory):\n",
+    "When merging branches, we might encounter issues related to the different versions of the same file. Let us induce such case. In the ```master``` branch create a following file ```pyth.py``` in the repository (which should be in your Home directory):\n",
     "\n",
     "```python\n",
     "def f(n):\n",
@@ -365,10 +364,11 @@
     "\n",
     "print(f(67))\n",
     "```\n",
-    "To resolve this conflict, you will have to delete the ```>>>>```, ```<<<<``` and ```=====``` markers together with branch names. **You also need to choose which version you want.** e.g.:\n",
+    "\n",
+    "We can now easily find the conflict between the current (`HEAD`) branch and the `new_branch` branch. To resolve this conflict, you will have to delete the ```<<<<<<<```, ```>>>>>>>```,  and ```=======``` markers together with branch names. **You also need to choose which version you want.** Let us keep the `new_branch` changes, so after editing above we should end up with the following:\n",
+    "\n",
     "```python\n",
     "def f(n):\n",
-    "\n",
     "    return 18*n\n",
     "\n",
     "print(f(67))\n",
@@ -389,11 +389,13 @@
     "-------------\n",
     "* **Deleting branches**\n",
     "\n",
-    "It is a good practice to delete branches which are no longer used. Time to say goodbye to the ```new_branch```:\n",
+    "It is good practice to delete branches which are no longer used. Time to say goodbye to the ```new_branch```:\n",
+    "\n",
     "```shell\n",
     "git branch -d new_branch\n",
     "```\n",
-    "You can also delete it on GitHub by going to the branches section of your repo.\n"
+    "\n",
+    "You can also delete it on GitHub by going to the branches section of your repo."
    ]
   },
   {
@@ -434,15 +436,15 @@
     "\n",
     "```shell\n",
     "vim irrelevant.txt\n",
-    "#type something in that file\n",
+    "# type something in that file\n",
     "vim .gitignore\n",
-    "# insert the name of that file\n",
+    "# write \"irrelevant.txt\" in .gitignore\n",
     "git add .\n",
     "git commit -m 'commit message'\n",
     "git push\n",
     "```\n",
     "\n",
-    "This should just add the .gitignore file to your repo. If you want to know more about ignoring files, try [here](https://git-scm.com/docs/gitignore).\n",
+    "This should just add the .gitignore file to your repo. If you want to know more about ignoring files, read more [here](https://git-scm.com/docs/gitignore).\n",
     "\n",
     "````"
    ]
@@ -469,11 +471,11 @@
     "\n",
     "```shell\n",
     "vim test.txt\n",
-    "#type something in that file\n",
+    "# type something in that file\n",
     "git stash -u\n",
     "git add . #nothing to add\n",
     "git commit -m 'commit message' #nothing to commit\n",
-    "git push #nothing to push\n",
+    "git push # there is actually nothing to push\n",
     "git stash pop\n",
     "git add .\n",
     "git commit -m 'commit message' \n",
@@ -517,5 +519,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
