--- a/notebooks/b_coding/programming_tools/1_Version_Control_Git.ipynb
+++ b/notebooks/b_coding/programming_tools/1_Version_Control_Git.ipynb
@@ -431,7 +431,7 @@
     "3) Add, commit, and push. Did it change anything?\n",
     "\n",
     "\n",
-    "````{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
     "```shell\n",
@@ -466,7 +466,7 @@
     "\n",
     "5) Can you see your file back?\n",
     "\n",
-    "````{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
     "```shell\n",
