--- a/notebooks/b_coding/fundamentals_of_computer_science/1_Algorythmic_Complexity.ipynb
+++ b/notebooks/b_coding/fundamentals_of_computer_science/1_Algorythmic_Complexity.ipynb
@@ -490,8 +490,8 @@
     "        \n",
     "The function `mulMatrix` in its innermost loop does two operations: one multiplication and one addition. It does this \\\\(n^3\\\\) times because there are three nested `for` loops, each one iterating `n` times.\n",
     "        \n",
-    "If we assume that multiplication and addition have the same complexity (which is of course not true), the answer is \\\\(O(2n^3)\\\\).\n",
-    " \n",
+    "Therefore \\\\(O(n^3)\\\\).\n",
+    "\n",
     "```"
    ]
   },
