Add module badges to some notebooks

--- a/notebooks/d_geosciences/Keplerian_Orbits.ipynb
+++ b/notebooks/d_geosciences/Keplerian_Orbits.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-gmod"
+    ]
+   },
    "source": [
     "# Keplerian orbits\n",
     "```{index} Keplerian orbits\n",
