--- a/notebooks/d_geosciences/1D_Resistivity_Forward_Modelling.ipynb
+++ b/notebooks/d_geosciences/1D_Resistivity_Forward_Modelling.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "module-fieldgps"
+    ]
    },
    "source": [
     "# 1D resistivity forward modelling\n",
@@ -253,6 +256,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
