--- a/notebooks/d_geosciences/Dynamic_Earth.ipynb
+++ b/notebooks/d_geosciences/Dynamic_Earth.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-dynep"
+    ]
+   },
    "source": [
     "# Seafloor ages\n",
     "## Theory\n",
