--- a/notebooks/d_geosciences/Seismology.ipynb
+++ b/notebooks/d_geosciences/Seismology.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-seism"
+    ]
+   },
    "source": [
     "# Downloading earthquake data\n",
     "There are many databases online we can download earthquake data from:\n",
@@ -483,6 +487,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
