Assert statement notebook

--- a/notebooks/b_coding/jupyter_book_guide.ipynb
+++ b/notebooks/b_coding/jupyter_book_guide.ipynb
@@ -349,8 +349,26 @@
     "\n",
     "### Inline Code\n",
     "\n",
-    "To use ```code``` in line with regular text use  \\```code\\```."
+    "To use `code` in line with regular text use  \\`code\\`."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indentation\n",
+    "\n",
+    "In order to indent a block of code use `&ensp;` in fron of the line\"\n",
+    "\n",
+    "&ensp;Indented text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
