--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -9,6 +9,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "MathJax.Hub.Config({\n",
+       "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
+       "});\n",
+       "MathJax.Hub.Queue(\n",
+       "  [\"resetEquationNumbers\", MathJax.InputJax.TeX],\n",
+       "  [\"PreProcess\", MathJax.Hub],\n",
+       "  [\"Reprocess\", MathJax.Hub]\n",
+       ");\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "MathJax.Hub.Config({\n",
+    "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
+    "});\n",
+    "MathJax.Hub.Queue(\n",
+    "  [\"resetEquationNumbers\", MathJax.InputJax.TeX],\n",
+    "  [\"PreProcess\", MathJax.Hub],\n",
+    "  [\"Reprocess\", MathJax.Hub]\n",
+    ");"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1036,7 +1073,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Determine the rate at which magma ﬂows up a twodimensional channel of width $d$ under the buoyant pressure gradient $−(\\rho_s− \\rho_l)g$. Assume laminar ﬂow.\n"
+    "Determine the rate at which magma flows up a twodimensional channel of width $d$ under the buoyant pressure gradient $-(\\rho_s- \\rho_l)g$. Assume laminar flow.\n"
    ]
   },
   {
