--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -1117,17 +1117,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "F_p = (\\rho_s-\\rho_l)g*l*\\delta x\n",
-    "\\label{eq45}\n",
-    "\\end{equation} "
+    "$$F_p = (\\rho_s-\\rho_l)g*l*\\delta x $$ (eq45)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Put equations \\ref{eq43}, \\ref{eq44} and \\ref{eq45} into \\ref{eq42}, we can obtain"
+    "Put equations \\ref{eq43}, \\ref{eq44} and {eq}`eq45` into \\ref{eq42}, we can obtain"
    ]
   },
   {
