--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -78,10 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\tau =\\mu \\frac{d u}{dy}\n",
-    "\\label{eq1}\n",
-    "\\end{equation} "
+    "$$\\tau =\\mu \\frac{d u}{dy}$$ (eq1)"
    ]
   },
   {
@@ -105,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Combining the equations \\ref{eq1} and \\ref{eq2}, and integrating the result we have the velocity $u$ profile as a function of $y$:"
+    "Combining the equations {eq}`eq1` and {eq}`eq2`, and integrating the result we have the velocity $u$ profile as a function of $y$:"
    ]
   },
   {
@@ -201,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This can be easily proved by integrating velocity equation \\ref{eq4} wrt. $y$ from $0$ to $h$, and then divided by the thickness of channel $h$"
+    "This can be easily proved by integrating velocity equation {eq}`eq4` wrt. $y$ from $0$ to $h$, and then divided by the thickness of channel $h$"
    ]
   },
   {
@@ -307,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This can be easily derived by using equation \\ref{eq1}, in which the velocity $u$ is expressed by equation \\ref{eq4}. Hence the result is"
+    "This can be easily derived by using equation {eq}`eq1`, in which the velocity $u$ is expressed by equation {eq}`eq4`. Hence the result is"
    ]
   },
   {
@@ -379,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point $y$, the derivative of the velocity (equation \\ref{eq4}) must be zero and the second derivative of it must be negative. Using this relationship, we can rearrange the equation and obtain"
+    "At this point $y$, the derivative of the velocity (equation {eq}`eq4`) must be zero and the second derivative of it must be negative. Using this relationship, we can rearrange the equation and obtain"
    ]
   },
   {
@@ -472,7 +469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we assume that the fluid flows in a constant velocity, that is, there is zero acceleration, then the net forces in the x-direction would be 0, which means the sum of the equations \\ref{eq11}, \\ref{eq12} and \\ref{eq13} would be zero."
+    "If we assume that the fluid flows in a constant velocity, that is, there is zero acceleration, then the net forces in the x-direction would be 0, which means the sum of the equations {eq}`eq11`, {eq}`eq12` and {eq}`eq13` would be zero."
    ]
   },
   {
@@ -489,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rearrange equation \\ref{eq14}, we can obtain"
+    "Rearrange equation {eq}`eq14`, we can obtain"
    ]
   },
   {
@@ -506,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Applying the shear stress from equation \\ref{eq1} into equation \\ref{eq15}, we have"
+    "Applying the shear stress from equation {eq}`eq1` into equation {eq}`eq15`, we have"
    ]
   },
   {
@@ -523,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Integrate equation \\ref{eq16} and we have"
+    "Integrate equation {eq}`eq16` and we have"
    ]
   },
   {
@@ -540,14 +537,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recall equation \\ref{eq1}, $\\frac{du}{dy}$ is related to shear stress $\\tau$. So we can apply the free surface condition ($\\tau=0$ at $y=0$), and obtain the constant $C_1 = 0$."
+    "Recall equation {eq}`eq1`, $\\frac{du}{dy}$ is related to shear stress $\\tau$. So we can apply the free surface condition ($\\tau=0$ at $y=0$), and obtain the constant $C_1 = 0$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Integrate equation \\ref{eq16} again, we have"
+    "Integrate equation {eq}`eq16` again, we have"
    ]
   },
   {
@@ -582,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we plug in $C_1$ and $C_2$ into equation \\ref{eq18}, we can show that:"
+    "Finally, we plug in $C_1$ and $C_2$ into equation {eq}`eq18`, we can show that:"
    ]
   },
   {
@@ -599,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is not hard to obtain the mean veolocity in the layer by integrating the equation \\ref{eq20} from $0$ to $h$ and then divide it by $h$:"
+    "It is not hard to obtain the mean veolocity in the layer by integrating the equation {eq}`eq20` from $0$ to $h$ and then divide it by $h$:"
    ]
   },
   {
@@ -724,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Combining equations \\ref{eq25} and \\ref{eq26}, we have"
+    "Combining equations {eq}`eq25` and {eq}`eq26`, we have"
    ]
   },
   {
@@ -810,7 +807,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is often convenient in ﬂuid mechanics to work in terms of dimensionless variables. The relation between the mean velocity in the pipe and the pressure gradient \\ref{eq30} can be put into standard dimensionless form by introducing two quantities: a dimensionless pressure gradient or friction factor f and the Reynolds number Re. The friction factor is deﬁned as "
+    "It is often convenient in ﬂuid mechanics to work in terms of dimensionless variables. The relation between the mean velocity in the pipe and the pressure gradient {eq}`eq30` can be put into standard dimensionless form by introducing two quantities: a dimensionless pressure gradient or friction factor f and the Reynolds number Re. The friction factor is deﬁned as "
    ]
   },
   {
@@ -1027,14 +1024,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can verify that if the flow is laminar or turbulent by calculating the $Re$, which is $1.49*10^7$. This is obviously larger than the threshold 2200, so the flow is actually turbulent. Thus, we need to recalculate the channel radius and mean velocity under the assumption that the flow is turbulent using the equation \\ref{eq35}."
+    "Now, we can verify that if the flow is laminar or turbulent by calculating the $Re$, which is $1.49*10^7$. This is obviously larger than the threshold 2200, so the flow is actually turbulent. Thus, we need to recalculate the channel radius and mean velocity under the assumption that the flow is turbulent using the equation {eq}`eq35`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plugging in the $f$ (equation \\ref{eq32}) and $Re$ (equation \\ref{eq33}) we defined earlier into the relationship in \\ref{eq35}, we have the mean velocity $\\bar{u}$ after rearranging"
+    "Plugging in the $f$ (equation {eq}`eq32`) and $Re$ (equation {eq}`eq33`) we defined earlier into the relationship in {eq}`eq35`, we have the mean velocity $\\bar{u}$ after rearranging"
    ]
   },
   {
@@ -1051,7 +1048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the simple relationship in the equation \\ref{eq40}, we can obtain the area, and thus the radius ($R=0.025m$) of the channel."
+    "Using the simple relationship in the equation {eq}`eq40`, we can obtain the area, and thus the radius ($R=0.025m$) of the channel."
    ]
   },
   {
@@ -1124,7 +1121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Put equations \\ref{eq43}, \\ref{eq44} and {eq}`eq45` into \\ref{eq42}, we can obtain"
+    "Put equations {eq}`eq43`, {eq}`eq44` and {eq}`eq45` into {eq}`eq42`, we can obtain"
    ]
   },
   {
@@ -1158,7 +1155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because of the symmetry of the velocity profile, we can believe that $C_1$ is zero, otherwise the equation \\ref{eq47} would not be symmetric. And plugging in the no-slip boundary condition where $u=0$ at $x=\\pm\\frac{d}{2}$, we have $C_2 = - \\frac{(\\rho_s-\\rho_l)g}{8\\mu}d^2$."
+    "Because of the symmetry of the velocity profile, we can believe that $C_1$ is zero, otherwise the equation {eq}`eq47` would not be symmetric. And plugging in the no-slip boundary condition where $u=0$ at $x=\\pm\\frac{d}{2}$, we have $C_2 = - \\frac{(\\rho_s-\\rho_l)g}{8\\mu}d^2$."
    ]
   },
   {
