--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -92,10 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\frac{d \\tau}{d y} = \\frac{dp}{dx} = -\\frac{p_1-p_0}{l}\n",
-    "\\label{eq2}\n",
-    "\\end{equation} "
+    "$$\\frac{d \\tau}{d y} = \\frac{dp}{dx} = -\\frac{p_1-p_0}{l}$$(eq2)"
    ]
   },
   {
@@ -109,10 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "u=\\frac{1}{2\\mu}\\frac{dp}{dx}y^2+c_1y+c_2\n",
-    "\\label{eq3}\n",
-    "\\end{equation} "
+    "$$u=\\frac{1}{2\\mu}\\frac{dp}{dx}y^2+c_1y+c_2$$ (eq3)"
    ]
   },
   {
@@ -126,10 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "u=\\frac{1}{2\\mu}\\frac{dp}{dx}(y^2-hy)-\\frac{u_0y}{h}+u_0\n",
-    "\\label{eq4}\n",
-    "\\end{equation} "
+    "$$u=\\frac{1}{2\\mu}\\frac{dp}{dx}(y^2-hy)-\\frac{u_0y}{h}+u_0$$(eq4)"
    ]
   },
   {
@@ -188,10 +179,7 @@
    "metadata": {},
    "source": [
     "Show that the mean velocity in the channel is given by\n",
-    "\\begin{equation}\n",
-    "\\bar{u}=-\\frac{h^2}{12\\mu}\\frac{dp}{dx}+\\frac{u_0}{2}\n",
-    "\\label{eq5}\n",
-    "\\end{equation} "
+    "$$\\bar{u}=-\\frac{h^2}{12\\mu}\\frac{dp}{dx}+\\frac{u_0}{2}$$(eq5)"
    ]
   },
   {
@@ -311,10 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\tau(y)=\\frac{1}{2}\\frac{dp}{dx}(2y-h) - \\mu\\frac{u_0}{h}\n",
-    "\\label{eq6}\n",
-    "\\end{equation} "
+    "$$\\tau(y)=\\frac{1}{2}\\frac{dp}{dx}(2y-h) - \\mu\\frac{u_0}{h}$$ (eq6)"
    ]
   },
   {
@@ -335,10 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\tau=-\\mu\\frac{u_0}{h}\n",
-    "\\label{eq7}\n",
-    "\\end{equation} "
+    "$$\\tau=-\\mu\\frac{u_0}{h}$$ (eq7)"
    ]
   },
   {
@@ -352,10 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\tau=\\frac{1}{2}\\frac{dp}{dx}(2y-h)\n",
-    "\\label{eq8}\n",
-    "\\end{equation} "
+    "$$\\tau=\\frac{1}{2}\\frac{dp}{dx}(2y-h)$$ (eq8)"
    ]
   },
   {
@@ -383,10 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "y=\\frac{h}{2}+\\frac{u_0\\mu_0}{h(dp/dx)}\n",
-    "\\label{eq9}\n",
-    "\\end{equation} "
+    "$$y=\\frac{h}{2}+\\frac{u_0\\mu_0}{h(dp/dx)}$$(eq9)"
    ]
   },
   {
