--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -503,10 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "u(y) = -\\frac{\\rho g sin\\alpha}{2\\mu}y^2+C_1 y+C_2\n",
-    "\\label{eq18}\n",
-    "\\end{equation} \n",
+    "$$u(y) = -\\frac{\\rho g sin\\alpha}{2\\mu}y^2+C_1 y+C_2$$(eq18) \n",
     "where $C_1=0$ from the free surface condition. "
    ]
   },
