--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -643,14 +643,14 @@
    "source": [
     "$$\n",
     "\\tau=\\mu\\frac{du}{dr}\n",
-    "$$(eq26)"
+    "$$(_eq26)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Combining equations {eq}`eq25` and {eq}`eq26`, we have"
+    "Combining equations {eq}`eq25` and {eq}`_eq26`, we have"
    ]
   },
   {
