--- a/_sources/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/_sources/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -503,10 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "u(y) = -\\frac{\\rho g sin\\alpha}{2\\mu}y^2+C_1 y+C_2\n",
-    "\\label{eq18}\n",
-    "\\end{equation} \n",
+    "$$u(y) = -\\frac{\\rho g sin\\alpha}{2\\mu}y^2+C_1 y+C_2$$(eq18) \n",
     "where $C_1=0$ from the free surface condition. "
    ]
   },
@@ -521,10 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "0 =  -\\frac{\\rho g sin\\alpha}{2\\mu}h^2+C_2\n",
-    "\\label{eq19}\n",
-    "\\end{equation}"
+    "$$0 =  -\\frac{\\rho g sin\\alpha}{2\\mu}h^2+C_2$$(eq19)"
    ]
   },
   {
@@ -538,10 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "u (y) = \\frac{\\rho g sin\\alpha}{2\\mu}(h^2-y^2) \n",
-    "\\label{eq20}\n",
-    "\\end{equation}"
+    "$$u (y) = \\frac{\\rho g sin\\alpha}{2\\mu}(h^2-y^2)$$(eq20)"
    ]
   },
   {
@@ -555,10 +546,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\bar{u} = \\frac{\\rho g h^2 sin\\alpha}{3\\mu}\n",
-    "\\label{eq21}\n",
-    "\\end{equation}"
+    "$$(eq21)"
    ]
   },
   {
@@ -572,10 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "Q = \\bar{u} h\n",
-    "\\label{eq22}\n",
-    "\\end{equation}"
+    "$$Q = \\bar{u} h$$(eq22)"
    ]
   },
   {
@@ -589,10 +576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "h = (\\frac{3\\mu Q}{\\rho g sin\\alpha})^{1/3}\n",
-    "\\label{eq23}\n",
-    "\\end{equation}"
+    "$$h = (\\frac{3\\mu Q}{\\rho g sin\\alpha})^{1/3}$$(eq23)"
    ]
   },
   {
@@ -628,10 +612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "(p_1-p_0)\\pi r^2 = -\\tau * 2\\pi r l\n",
-    "\\label{eq24}\n",
-    "\\end{equation}"
+    "$$(p_1-p_0)\\pi r^2 = -\\tau * 2\\pi r l$$(eq24)"
    ]
   },
   {
@@ -645,10 +626,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "-\\tau = \\frac{(p_1-p_0)\\pi r^2}{2\\pi r l} = \\frac{r}{2}\\frac{p_1-p_0}{l} = \\frac{r}{2}\\frac{dp}{dx}\n",
-    "\\label{eq25}\n",
-    "\\end{equation}\n",
+    "$$-\\tau = \\frac{(p_1-p_0)\\pi r^2}{2\\pi r l} = \\frac{r}{2}\\frac{p_1-p_0}{l} = \\frac{r}{2}\\frac{dp}{dx}$$(eq25)\n",
     "where dp/dx is the pressure gradient along the pipe."
    ]
   },
@@ -663,17 +641,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\tau=\\mu\\frac{du}{dr}\n",
-    "\\label{eq26}\n",
-    "\\end{equation}"
+    "$$(_eq26)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Combining equations {eq}`eq25` and {eq}`eq26`, we have"
+    "Combining equations {eq}`eq25` and {eq}`_eq26`, we have"
    ]
   },
   {
